src/css/main.css
body {
  background-color: #white;
  background: linear-gradient(rgba(255,255,255,.85),rgba(255,255,255,.85)),
      url("../images/background-image.png");
  background-size: contain;
  font-size: 16px;
  line-height: 1.5;
}

.jumbotron h1, h2{
  color: white;
  line-height: 50px;
  text-shadow: #631F01 1px 0 10px;
  text-align: center;
}

.jumbotron h1{
  font-size: 50px;
  padding: 20px 10px 0px 10px;
}

h2{
  font-size: 25px;
  line-height: 50px;
  padding: 0px 10px 20px 10px;
}

h3{
  font-size: 24px;
}

.navbar {
  margin-bottom: 0;
}

.jumbotron {
  background: linear-gradient(rgba(0,0,0,.5),rgba(0,0,0,.5)),
      url("../images/wasteland.jpg");
  /* background-image: url("images/wasteland.jpg"); */
  background-size: cover;
  background-position-y: 40%;
  margin-bottom:0;
}

.first-element{
  margin-top: 2em;
}

#placeholder1, #placeholder2 {
  height: 50px;
  width: 50px;
  padding: 5px;
  margin: 0;
  border: 1px solid gray;
  border-radius: 10px;
  font-size:30px;
  text-align: center;
  display: inline-block;
}

#yourMutation{
  font-style: italic;
}

p#mutationPlaceholderMutation{
  text-align: left;
  font-weight: bold;
  margin-top: 1.5em;
}

p#mutationPlaceholderDescription{
  text-align: left;
  font-style: normal;
}

